grammar.js
    source_file: ($) => repeat($._root_element),

    _root_element: ($) =>
      choice(
        $.package_definition,
        $.library_package,
        $._definition,
        $._usage,
        $.import_statement,
        $.alias_statement,
        $.dependency,
        $.comment_statement,
        $.documentation,
        $.connect_statement,
      ),

    // =========================================================================
    // Packages
    // =========================================================================
    package_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        'package',
        optional($.identification),
        $.package_body,
      ),

    package_body: ($) =>
      choice(';', seq('{', repeat($._package_member), '}')),

    _package_member: ($) =>
      choice(
        $._definition,
        $._usage,
        $.actor_usage,
        $.import_statement,
        $.alias_statement,
        $.comment_statement,
        $.documentation,
        $.package_definition,
        $.library_package,
        $.dependency,
        $.allocate_statement,
        $.filter_statement,
        $.connect_statement,
        $.satisfy_statement,
        $.assert_statement,
        $.message_statement,
        $.shorthand_attribute,
      ),

    // Shorthand attribute assignment at package level: T1 = 10.0 [N * m];
    shorthand_attribute: ($) =>
      seq(
        $.name,
        choice(
          $.value_part,
          seq(':>', $.qualified_name),
        ),
        ';',
      ),

    // =========================================================================
    // Identification
    // =========================================================================
    identification: ($) =>
      choice(
        seq($.short_name, optional($.name)),
        seq('id', choice($.string_literal, $.name), optional($.name)),
        $.name,
      ),

    name: ($) => choice($.identifier, $.quoted_name, alias('id', $.identifier)),

    action_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional(choice('individual', 'variation')),
        'action',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.action_body,
      ),

    calc_definition: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        'calc',
        'def',
        optional($.identification),
        optional($.definition_specialization),
        $.action_body,
      ),

    parameter_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        $.port_direction,
        optional(choice('part', 'individual', 'ref', 'calc', 'attribute', 'item', 'occurrence', 'action', 'constraint')),
        optional($.usage_declaration),
        $.usage_body,
      ),

    part_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional(choice('then', 'first')),
        optional(choice('snapshot', 'timeslice', 'variation', 'individual')),
        optional('ref'),
        'part',
        optional($.usage_declaration),
        $.usage_body,
      ),

    port_direction: ($) => choice('in', 'out', 'inout'),

    action_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional(choice('variation', 'variant')),
        optional(choice('first', 'then', 'loop')),
        optional('individual'),
        optional('ref'),
        'action',
        optional($.usage_declaration),
        optional(choice('terminate', $.accept_part, $.send_part)),
        $.action_body,
      ),

    action_body: ($) =>
      choice(
        ';',
        seq(
          optional(seq('while', $._expression)),
          '{',
          repeat(choice($._behavioral_member, $.opaque_body, $.textual_representation)),
          optional($._expression),
          '}',
          optional(seq('until', $._expression, ';')),
        ),
      ),

    attribute_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('derived'),
        optional('constant'),
        optional('variation'),
        optional($.port_direction),
        optional('ref'),
        'attribute',
        choice(
          seq(optional($.usage_declaration), optional('ordered'), $.usage_body),
          seq(':>>', $.feature_chain, optional($.value_part), ';'),
        ),
      ),

    calc_usage: ($) =>
      seq(
        repeat($.prefix_metadata),
        optional($.visibility),
        optional('abstract'),
        optional('ref'),
        'calc',
        optional($.usage_declaration),
        $.usage_body,
      ),

    usage_declaration: ($) =>
      choice(
        // Must have at least identification
        seq(
          $.identification,
          optional($.multiplicity),
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.typing_part),
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        ),
        // Or just typing (anonymous typed usage)
        seq(
          $.typing_part,
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        ),
        // Or just specialization without typing
        prec.dynamic(100, seq(
          $.specialization_part,
          optional($.typing_part),
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        )),
        // Or just a relationship (e.g., "part redefines cyl")
        seq(
          $.relationship_part,
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.typing_part),
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        ),
        // Or just multiplicity
        seq(
          $.multiplicity,
          repeat(choice($.multiplicity, $.relationship_part, $.nonunique_modifier)),
          optional($.value_part),
        ),
        // Or just value
        $.value_part,
      ),

    // =========================================================================
    // Typing (: Type)
    // =========================================================================
    typing_part: ($) =>
      seq(':', optional('~'), commaSep1($.qualified_name)),

    // =========================================================================
    // Definition Specialization (for definitions: :> or specializes)
    // =========================================================================
    multiplicity: ($) =>
      seq(
        '[',
        optional(choice(
          seq($.multiplicity_bound, '..', choice($.multiplicity_bound, '*')),
          $.multiplicity_bound,
          '*',
        )),
        ']',
      ),

    multiplicity_bound: ($) => choice($.integer_literal, $.identifier),

    value_part: ($) =>
      seq(
        choice('=', ':=', seq('default', '='), seq('default', ':='), 'default'),
        $._expression,
      ),

    // =========================================================================
    // Bodies
    // =========================================================================
    opaque_body: ($) =>
      seq('language', $.string_literal, $.block_comment_body),

    textual_representation: ($) =>
      seq(
        'rep',
        optional($.identification),
        'language',
        $.string_literal,
        $.block_comment_body,
      ),

    usage_body: ($) =>
      choice(';', seq('{', repeat($._usage_member), '}')),

    _usage_member: ($) =>
      choice(
        $._definition,
        $._usage,
        $.end_usage,
        $.connect_statement,
        $.bind_statement,
        $.flow_statement,
        $.stream_statement,
        $.succession_statement,
        $.first_statement,
        $.if_then_statement,
        $.then_if_block,
        $.done_statement,
        $.control_node,
        $.then_succession,
        $.perform_statement,
        $.terminate_statement,
        $.for_loop,
        $.assign_statement,
        $.send_statement,
        $.transition_statement,
        $.entry_statement,
        $.do_statement,
        $.exit_statement,
        $.accept_then_statement,
        $.comment_statement,
        $.documentation,
        $.redefines_statement,
        $.expression_statement,
        $.assert_statement,
        $.assume_statement,
        $.require_statement,
        $.subject_statement,
        $.satisfy_statement,
        $.return_statement,
        $.actor_usage,
        $.objective_usage,
        $.verify_statement,
        $.allocate_statement,
        $.import_statement,
        $.alias_statement,
        $.variant_usage,
        $.message_statement,
        $.include_statement,
        $.expose_statement,
        $.render_statement,
        $.filter_statement,
        $.textual_representation,
        $.specialization_statement,
      ),

    // =========================================================================
    // Context-Specific Members (TD-1)
    // =========================================================================

    // Base structural members - valid in part, item, port, connection, etc.
    _behavioral_member: ($) =>
      choice(
        $._structural_member,
        $.if_then_statement,
        $.then_if_block,
        $.if_else_block,
        $.done_statement,
        $.else_statement,
        $.control_node,
        $.first_statement,
        $.perform_statement,
        $.terminate_statement,
        $.for_loop,
        $.while_loop,
        $.loop_until,
        $.assign_statement,
        $.send_statement,
        $.accept_then_statement,
        $.return_statement,
        $.subject_statement,
        $.objective_usage,
      ),

    // State members - valid in state (adds entry/do/exit/transition to behavioral)
    succession_statement: ($) =>
      seq(
        optional($.visibility),
        'succession',
        optional($.identification),
        optional($.typing_part),
        optional($.multiplicity),
        'first',
        optional($.multiplicity),
        $.feature_chain,
        optional(seq('if', $._expression)),
        'then',
        optional($.multiplicity),
        $.feature_chain,
        $.usage_body,
      ),

    // =========================================================================
    // If-Then Statement (guard succession)
    // =========================================================================
    if_then_statement: ($) =>
      seq(
        'if',
        $._expression,
        'then',
        $.name,
        ';',
      ),

    // =========================================================================
    // Then-If Block (conditional control)
    // =========================================================================
    done_statement: ($) =>
      seq(
        optional(choice('then', 'else')),
        'done',
        ';',
      ),

    else_statement: ($) =>
      seq('else', $.name, ';'),

    control_node: ($) =>
      seq(
        optional('then'),
        choice(
          seq('decide', optional($.name)),
          seq('merge', optional($.name)),
          seq('fork', optional($.name)),
          seq('join', optional($.name)),
        ),
        choice(';', seq('{', repeat($._behavioral_member), '}')),
      ),

    first_statement: ($) =>
      choice(
        seq('first', $.name, ';'),
        seq('first', $.feature_chain, 'then', $.feature_chain, $.usage_body),
      ),

    perform_statement: ($) =>
      seq(
        optional(choice('variation', 'variant')),
        'perform',
        optional('action'),
        choice(
          seq(choice($.feature_chain, $.qualified_name), optional(choice(seq(':>>', $.qualified_name), seq('redefines', $.name)))),
          optional($.usage_declaration),
        ),
        optional($.multiplicity),
        optional('ordered'),
        optional(seq('references', $.feature_chain)),
        choice(';', seq('{', repeat($._behavioral_member), '}')),
      ),

    // =========================================================================
    // Terminate Statement
    // =========================================================================
    terminate_statement: ($) =>
      seq(
        'terminate',
        $.feature_chain,
        ';',
      ),

    // =========================================================================
    // For Loop
    // =========================================================================
    for_loop: ($) =>
      seq(
        'for',
        $.name,
        optional($.typing_part),
        'in',
        $._expression,
        '{',
        repeat($._behavioral_member),
        '}',
      ),

    while_loop: ($) =>
      seq(
        'while',
        $._expression,
        '{',
        repeat($._behavioral_member),
        '}',
        optional(seq('until', $._expression, ';')),
      ),

    assign_statement: ($) =>
      seq(
        optional('then'),
        'assign',
        $.feature_chain,
        ':=',
        $._expression,
        ';',
      ),

    // =========================================================================
    // Send Statement
    // =========================================================================
    send_statement: ($) =>
      seq(
        optional('then'),
        'send',
        $._expression,
        choice(seq('to', $.feature_chain), seq('via', $.feature_chain)),
        ';',
      ),

    // =========================================================================
    // Transition Statement (state machine)
    // =========================================================================
    accept_then_statement: ($) =>
      choice(
        seq(
          'accept',
          $.trigger_kind,
          optional(seq('via', $.feature_chain)),
          optional(seq('if', $._expression)),
          optional(seq('do', $._transition_action)),
          'then',
          $.name,
          ';',
        ),
        seq('accept', $.qualified_name, optional(seq('via', $.feature_chain)), ';'),
        seq('accept', $.identification, $.typing_part, ';'),
      ),

    _transition_action: ($) =>
      choice(
        seq('send', optional('new'), $._expression, choice(seq('to', $.feature_chain), seq('via', $.feature_chain))),
        seq('action', optional($.usage_declaration), optional(seq('{', repeat($._usage_member), '}'))),
        $.feature_chain,
      ),

    return_statement: ($) =>
      choice(
        seq('return', $.qualified_name, ';'),
        seq('return', 'attribute', $.usage_declaration, $.usage_body),
        seq('return', optional(choice('part', 'ref')), optional($.usage_declaration), $.usage_body),
      ),

    feature_chain: ($) =>
      prec.left(1, seq($.name, repeat(seq(choice('.', '::'), $.name)))),

    // =========================================================================
    // Import and Alias
    // =========================================================================
    block_comment_body: ($) => /\/\*[^*]*\*+([^/*][^*]*\*+)*\//,

    // =========================================================================
    // Metadata
    // =========================================================================
    measurement_expression: ($) =>
      prec.left(5, choice(
        seq($._expression, '[', $._unit_expression, ']'),
        seq($._expression, '@', '[', $._unit_expression, ']'),
      )),

    _unit_expression: ($) =>
      choice(
        $.unit_binary,
        $.unit_exponent,
        $.qualified_name,
        $.integer_literal,
      ),

    integer_literal: ($) => /\d+/,
